--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -13,17 +13,19 @@
         android:id="@+id/linearLayout"
         android:layout_width="350dp"
         android:layout_height="500dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="70dp"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.335">
+        app:layout_constraintVertical_bias="0.194">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivSignUser"
+            android:layout_marginTop="-10dp"
             android:layout_width="115dp"
             android:layout_height="115dp"
             android:gravity="center_horizontal|center_vertical"
@@ -35,6 +37,7 @@
 
         <EditText
             android:id="@+id/etName"
+            android:layout_marginTop="-5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="name"
@@ -49,7 +52,6 @@
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:autofillHints="password"
             android:hint="Пароль"
             android:inputType="textPassword"
@@ -62,7 +64,6 @@
             android:id="@+id/etPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:autofillHints="phone"
             android:hint="Номер телефона"
             android:inputType="phone"
@@ -76,7 +77,6 @@
             android:id="@+id/etLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:autofillHints="emailAddress"
             android:hint="Логин"
             android:inputType="textEmailAddress"
@@ -89,7 +89,6 @@
             android:id="@+id/etConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:autofillHints="password"
             android:hint="Подтвердите пароль"
             android:inputType="textPassword"
@@ -102,7 +101,7 @@
             android:id="@+id/etCity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
             android:autofillHints="name"
             android:hint="Город"
             android:inputType="text"
@@ -115,7 +114,7 @@
             android:id="@+id/signUpBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             android:text="Зарегистрироваться"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
